--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -5,6 +5,14 @@
       <hr>
     </div>
   </div>
+  <div class="row justify-content-sm-center">
+    <div class="col-10">
+      <a route-href="route: add">
+        <button type="button" class="btn btn-success">Add new</button>
+      </a>
+    </div>
+  </div>
+  <br>
   <table class="table table-striped table-hover">
     <thead>
       <tr>
@@ -14,6 +22,7 @@
         <th scope="col">Status</th>
         <th scope="col">Use date</th>
         <th scope="col">Email</th>
+        <th scope="col">Action</th>
       </tr>
     </thead>
     <tbody>
@@ -30,6 +39,10 @@
         <td>${item.useDate}</td>
         <td>
           <input type="checkbox" model.bind="item" checked.bind="selectedItems">
+        </td>
+        <td>
+          <button click.delegate="changeEditItem(item)" type="button" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#editModal"><i class="fas fa-pencil-alt"></i></button>
+          <button click.delegate="delete(item.id)" type="button" class="btn btn-danger btn-sm" ><i class="fas fa-trash-alt"></i></button>
         </td>
       </tr>
     </tbody>
@@ -66,6 +79,46 @@
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             <button type="submit" class="btn btn-primary">Send</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </form>
+
+  <form submit.delegate="edit()">
+    <div class="modal fade" id="editModal" tabindex="-1" role="dialog" aria-labelledby="editModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="editModalLabel">Edit info</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div if.bind="inform==2" class="alert alert-success" role="alert">
+              <h4 class="alert-heading">Well done!</h4>
+              <p>Information has changed!</p>
+            </div>
+            <div class="form-group">
+              <label for="editId">Item Code: <strong>${selectedItem.id}</strong></label>
+            </div>
+            <div class="form-group">
+              <label for="editName">Name</label>
+              <input value.bind="selectedItem.name" type="text" class="form-control" id="editName" placeholder="Enter name">
+            </div>
+            <div class="form-group">
+              <label for="editDescription">Description</label>
+              <input value.bind="selectedItem.description" type="text" class="form-control" id="editDescription" placeholder="Enter description">
+            </div>
+            <div class="form-group">
+              <label for="editUseDate">Use date</label>
+              <input value.bind="selectedItem.useDate" type="number" class="form-control" id="editUseDate" placeholder="Enter use date">
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="submit" class="btn btn-primary">Save</button>
           </div>
         </div>
       </div>
