--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -41,8 +41,8 @@
           <input type="checkbox" model.bind="item" checked.bind="selectedItems">
         </td>
         <td>
-          <button click.delegate="changeEditItem(item)" type="button" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#editModal"><i class="fas fa-pencil-alt"></i></button>
-          <button click.delegate="delete(item.id)" type="button" class="btn btn-danger btn-sm" ><i class="fas fa-trash-alt"></i></button>
+          <button click.delegate="changeEditItem(item)" type="button" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#editModal" title="edit"><i class="fas fa-pencil-alt"></i></button>
+          <button click.delegate="delete(item.id)" type="button" class="btn btn-danger btn-sm" title="delete"><i class="fas fa-trash-alt"></i></button>
         </td>
       </tr>
     </tbody>
