--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -11,6 +11,16 @@
         <button type="button" class="btn btn-success">Add new</button>
       </a>
     </div>
+    <!-- <div class="row col-6">
+      <div class="col-2">
+        <label for="category">Category</label>
+      </div>
+      <div class="col-4">
+        <select class="form-control" value.bind="categoryid">
+          <option repeat.for="item of categories" model.bind="item.id">${item.name}</option>
+        </select>      
+      </div>
+    </div> -->
   </div>
   <br>
   <table class="table table-striped table-hover">
@@ -42,7 +52,7 @@
         </td>
         <td>${item.useDate}</td>
         <td>
-          <input type="checkbox" model.bind="item" checked.bind="selectedItems">
+          <input type="checkbox" change.delegate="onChange()" checked.bind="item.email">
         </td>
         <td>
           <button click.delegate="changeEditItem(item)" type="button" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#editModal" title="edit"><i class="fas fa-pencil-alt"></i></button>
@@ -53,7 +63,7 @@
   </table>
   <div class="row justify-content-sm-center">
     <div class="col-sm-4">
-        <button disabled.bind="selectedItems.length===0" type="button" class="btn ${selectedItems.length===0 ? 'btn-secondary' : 'btn-primary'} btn-lg btn-block" data-toggle="modal" data-target="#exampleModal">Send email</button>
+        <button type="button" class="btn btn-primary btn-lg btn-block" data-toggle="modal" data-target="#exampleModal">Send email</button>
     </div>
   </div>
   <form submit.delegate="submit()">
