--- a/src/app.css
+++ b/src/app.css
@@ -2,3 +2,7 @@
   text-shadow: 2px 2px 10px #757575;
   color:#666060;
 }
+ux-dialog-overlay.active {
+  background-color: black;
+  opacity: .5;
+}
